refactor: massive refactoring and expansion of unit tests